# pywlroots

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  check_headers.py  dist-build-constraints.txt  pyproject.toml  requirements-wheel.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
tests/: conftest.py  test_display.py  test_helper.py  test_wlroots.py
tiny/: __main__.py  cursor_mode.py  keyboard_handler.py  server.py  view.py
wlroots/: __init__.py  allocator.py  backend.py  ffi_build.py  helper.py  renderer.py  version.py  xwayland.py
wlroots/include/: README.rst  check_headers.py  idle-inhibit-unstable-v1-protocol.h  idle-protocol.h  pointer-constraints-unstable-v1-protocol.h  wlr-layer-shell-unstable-v1-protocol.h  wlr-output-power-management-unstable-v1-protocol.h  xdg-shell-protocol.h
wlroots/types/: __init__.py  compositor.py  cursor.py  data_device_manager.py  output.py  output_layout.py  pointer.py  seat.py  xcursor_manager.py  xdg_shell.py
wlroots/util/: box.py  clock.py  edges.py  log.py  region.py
wlroots/wlr_types/: __init__.py  box.py  buffer.py  compositor.py  cursor.py  data_control_v1.py  data_device_manager.py  export_dmabuf_v1.py  foreign_toplevel_management_v1.py  fractional_scale_v1.py  gamma_control_v1.py  idle.py  idle_inhibit_v1.py  idle_notify_v1.py  input_device.py  input_inhibit.py  keyboard.py  layer_shell_v1.py  matrix.py  output.py  output_damage.py  output_layout.py  output_management_v1.py  output_power_management_v1.py  pointer.py  pointer_constraints_v1.py  pointer_gestures_v1.py  presentation_time.py  primary_selection_v1.py  relative_pointer_manager_v1.py  scene.py  screencopy_v1.py  seat.py  server_decoration.py  session_lock_v1.py  single_pixel_buffer_v1.py  surface.py  switch.py  texture.py  touch.py  (+8 more)
