[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "cffi>=1.12.0; python_implementation != 'PyPy'",
]
build-backend = "setuptools.build_meta"

[project]
name = "pywlroots"
description = "Python binding to the wlroots library using cffi"
authors = [{name = "Sean Vig", email = "sean.v.775@gmail.com"}]
requires-python = ">=3.7"
license = {text = "MIT"}
readme = "README.rst"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cffi >= 1.12.0; python_implementation != 'PyPy'",
    "pywayland >= 0.4.14",
    "xkbcommon >= 0.2",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
homepage = "https://github.com/flacjacket/pywlroots"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["wlroots*"]

[tool.setuptools.package-data]
wlroots = ["py.typed", "include/*.h"]

[tool.setuptools.dynamic]
version = {attr = "version.version"}
