[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "cffi>=1.12.0; platform_python_implementation != 'PyPy'",
]
build-backend = "setuptools.build_meta"

[project]
name = "pywlroots"
description = "Python binding to the wlroots library using cffi"
authors = [{name = "Sean Vig", email = "sean.v.775@gmail.com"}]
requires-python = ">=3.8"
license = {text = "University of Illinois/NCSA Open Source License"}
readme = "README.rst"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cffi >= 1.12.0; platform_python_implementation != 'PyPy'",
    "pywayland >= 0.4.14",
    "xkbcommon >= 0.2",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
typecheck = [
    "mypy",
    "types-cffi",
    "types-dataclasses",
]

[project.urls]
homepage = "https://github.com/flacjacket/pywlroots"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["wlroots*"]

[tool.setuptools.package-data]
wlroots = ["py.typed", "include/*.h"]

[tool.setuptools.dynamic]
version = {attr = "version.version"}

[tool.ruff]
# E/W pycodestyle errors + warnings
# F pyflakes
# I isort
# N pep8 naming
# UP pyupgrade
# RUF ruff specific rules
select = ['E', 'F', 'I', 'N', 'W', 'UP', 'RUF']
# Match black line length
line-length = 88
target-version = "py38"
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
# disallow_any_decorated = true
# disallow_any_explicit = true
# disallow_any_expr = true
# disallow_any_generics = true
# disallow_any_unimported = true
# disallow_incomplete_defs = true
disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
# disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
# warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "cffi",
    "wlroots._ffi",
    "xkbcommon.*",
]
ignore_missing_imports = true
