[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel",
    "cffi>=1.12.0; platform_python_implementation != 'PyPy'",
    "pywayland>=0.4.14",
    "xkbcommon",
]
build-backend = "setuptools.build_meta"

[project]
name = "pywlroots"
description = "Python binding to the wlroots library using cffi"
authors = [{name = "Sean Vig", email = "sean.v.775@gmail.com"}]
requires-python = ">=3.10"
license = "NCSA"
readme = "README.rst"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cffi >= 1.12.0; platform_python_implementation != 'PyPy'",
    "pywayland >= 0.4.14",
    "xkbcommon",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
typecheck = [
    "mypy",
    "types-cffi",
    "types-dataclasses",
]

[project.urls]
homepage = "https://github.com/flacjacket/pywlroots"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["wlroots*"]

[tool.setuptools.package-data]
wlroots = ["py.typed", "include/*.h"]

[tool.setuptools.dynamic]
version = {attr = "version.version"}

[tool.ruff]
# E/W pycodestyle errors + warnings
# F pyflakes
# I isort
# N pep8 naming
# UP pyupgrade
# RUF ruff specific rules
lint.select = ['E', 'F', 'I', 'N', 'W', 'UP', 'RUF']
lint.ignore = ["E501"]
line-length = 88

[tool.check-manifest]
ignore = [
    "wlroots/_build.py",
    "wlroots/include/*.h",
]

[tool.mypy]
packages = ["wlroots", "tiny"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
# warn_return_any = true
no_implicit_optional = true
show_error_codes = true
warn_incomplete_stub = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "cffi",
    "wlroots._ffi",
    "xkbcommon.*",
]
ignore_missing_imports = true
