[metadata]
name = pywlroots
version = attr:wlroots.__version__
url = https://github.com/flacjacket/pywlroots
license = MIT
license_file = LICENSE
description = Python binding to the wlroots library using cffi
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sean Vig
author_email = sean.v.775@gmail.com
classifiers =
  Development Status :: 2 - Pre-Alpha
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Desktop Environment :: Window Managers
  Topic :: Software Development :: Libraries
project_urls =
  Code = https://github.com/flacjacket/pywlroots/
  Issue tracker = https://github.com/flacjacket/pywlroots/issues

[options]
packages = find:
python_requires >= 3.6
setup_requires =
  cffi >= 1.12.0
  setuptools >= 40.5.0
install_requires =
  cffi >= 1.12.0
  pywayland >= 0.1.1
tests_require =
  flake8
zip_safe = False

[flake8]
max-line-length = 120

[mypy-cffi]
ignore_missing_imports = True
[mypy-wlroots._ffi]
ignore_missing_imports = True
