[metadata]
name = pywlroots
version = attr:version.version
url = https://github.com/flacjacket/pywlroots
license = MIT
license_file = LICENSE
description = Python binding to the wlroots library using cffi
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sean Vig
author_email = sean.v.775@gmail.com
classifiers =
  Development Status :: 2 - Pre-Alpha
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Desktop Environment :: Window Managers
  Topic :: Software Development :: Libraries
project_urls =
  Code = https://github.com/flacjacket/pywlroots/
  Issue tracker = https://github.com/flacjacket/pywlroots/issues

[options]
packages = find:
python_requires >= 3.7
install_requires =
  cffi >= 1.12.0
  pywayland >= 0.1.1
  xkbcommon >= 0.2
zip_safe = False

[options.extras_require]
test =
  pytest

[options.package_data]
wlroots = py.typed

[options.packages.find]
include =
  wlroots*

[flake8]
max-line-length = 120

[mypy]
python_version = 3.7
check_untyped_defs = true
# disallow_any_decorated = true
# disallow_any_explicit = true
# disallow_any_expr = true
# disallow_any_generics = true
# disallow_any_unimported = true
# disallow_incomplete_defs = true
disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
# disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
# warn_return_any = true
warn_unreachable = true
warn_unused_configs = True
warn_unused_ignores = true
[mypy-cffi]
ignore_missing_imports = True
[mypy-wlroots._ffi]
ignore_missing_imports = True
[mypy-xkbcommon.*]
ignore_missing_imports = True
